fixes truncated drop shadow on vote images, uses CSS to style vote buttons instead of using image_submit_tag - closes #36

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -383,17 +383,22 @@ small {
 }
 
 .article .section-links .vote-button {
-	background: none;
+	background: transparent;
 	border: 0;
 	height: 17px;
+	-moz-box-shadow: none;
+	text-indent: -9999px;
+	-webkit-box-shadow: none;
 	width: 19px;
 }
 
 .article .section-links .vote-up-button {
+  background: url(/images/icon_vote_up.png) no-repeat;
 	padding: 0;
 }
 
 .article .section-links .vote-down-button {
+  background: url(/images/icon_vote_down.png) no-repeat;
 	padding: 0;
 }
 
